styles/tailwind.css
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";

:root {
  --ff-primary: "Ysabeau Infant", sans-serif;
  --ff-secondary: "Ubuntu", sans-serif;
  --fc-primary: #fcfbff;
  --color-bronze: #bb752e;
  --bg-primary: #030109;
  --bg-secondary: #010006;
}

.bg-primary {
  background-color: var(--bg-primary);
}

.bg-secondary {
  background-color: var(--bg-secondary);
}

html,
body {
  line-height: 1.4;
  font-size: 1.1rem;
  scroll-behavior: smooth;
  font-family: var(--ff-secondary);
  color: var(--fc-primary);
  background-color: var(--bg-secondary);
}

.font-primary {
  font-family: var(--ff-primary);
}

.contributor-images {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 10px;
}

.contributor-images img {
  border-radius: 50%;
  object-fit: cover;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@keyframes waveScale {
  0%,
  20%,
  100% {
    transform: scale(1);
  }
  10% {
    transform: scale(1.05);
  }
}

.scrollable-dropdown {
  max-height: 400px;
  overflow-y: auto;
}

code {
  font-family: sans-serif;
  font-size: 1.1rem;
  background-color: #0e0e0e;
  padding: 0 0.5rem;
  border-radius: 0.2rem;
}

